--- a/index.html
+++ b/index.html
@@ -1,77 +1,98 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Mundo Gamer</title>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="css/styles.css" />
+  <link rel="icon" href="assets/MUNDO.png" />
 </head>
 <body>
-  <!-- Encabezado -->
   <header>
-    <h1>🎮 Mundo Gamer</h1>
+    <img src="assets/MUNDO.png" alt="Logo Mundo Gamer" class="logo" />
     <nav>
       <ul>
         <li><a href="#inicio">Inicio</a></li>
         <li><a href="#noticias">Noticias</a></li>
-        <li><a href="#juegos">Juegos</a></li>
+        <li><a href="#galeria">Galería</a></li>
         <li><a href="#contacto">Contacto</a></li>
       </ul>
     </nav>
   </header>
 
-  <!-- Banner -->
-  <section id="inicio" class="banner">
-    <h2>Bienvenido al universo de los videojuegos</h2>
-    <p>Explora las últimas noticias, reseñas y tendencias gamer.</p>
+  <section id="inicio" class="hero">
+    <h1>Bienvenido a <span>Mundo Gamer</span></h1>
+    <p>Tu portal de videojuegos con estilo retro y neón.</p>
   </section>
 
-  <!-- Noticias -->
-  <section id="noticias" class="contenedor">
-    <h2>📰 Noticias</h2>
-    <article>
-      <h3>Lanzamiento de GTA VI</h3>
-      <p>Rockstar confirma fecha de lanzamiento y detalles del nuevo mapa.</p>
-    </article>
-    <article>
-      <h3>Nintendo Direct</h3>
-      <p>Nuevos títulos anunciados para Switch y actualización de Zelda.</p>
-    </article>
-  </section>
+  
+<section id="noticias" class="noticias-seccion">
+  <div class="container">
+    <h2>Noticias</h2>
+    <div class="noticias-grid">
+      <article class="noticia">
+        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/0/08/Hollow_Knight_Silksong_Logo.svg/960px-Hollow_Knight_Silksong_Logo.svg.png" alt="Hollow Knight: Silksong" style="max-width:300px;display:block;margin-bottom:8px;">
+        <h3>Hollow Knight: Silksong colapsa tiendas digitales en su lanzamiento</h3>
+        <p>El esperado lanzamiento de <em>Hollow Knight: Silksong</em> provocó caídas temporales en plataformas como Steam y la eShop debido a la gran afluencia de jugadores; alcanzó picos de usuarios simultáneos históricos para un indie. Muchos medios destacaron la inusual magnitud del estreno.</p>
+        <p><a href="https://www.tomshardware.com/video-games/pc-gaming/silksong-crashes-steam-nintendo-eshop-on-release-day-highly-anticipated-indie-video-game-took-six-years-to-arrive-and-is-already-one-of-the-most-played-games-ever-on-steam" target="_blank" rel="noopener">Leer más</a></p>
+      </article>
 
-  <!-- Juegos -->
-  <section id="juegos" class="contenedor">
-    <h2>🎮 Juegos Populares</h2>
-    <div class="tarjetas">
-      <div class="tarjeta">
-        <img src="https://via.placeholder.com/200x120" alt="Fortnite">
-        <h3>Fortnite</h3>
-      </div>
-      <div class="tarjeta">
-        <img src="https://via.placeholder.com/200x120" alt="Minecraft">
-        <h3>Minecraft</h3>
-      </div>
-      <div class="tarjeta">
-        <img src="https://via.placeholder.com/200x120" alt="Call of Duty">
-        <h3>Call of Duty</h3>
-      </div>
+      <article class="noticia">
+        <img src="https://upload.wikimedia.org/wikipedia/commons/f/fe/The_Elder_Scrolls_IV_Oblivion_Remastered_logo.png" alt="Oblivion Remastered" style="max-width:300px;display:block;margin-bottom:8px;">
+        <h3>Oblivion Remastered recibirá edición física Deluxe en octubre</h3>
+        <p>Bethesda y socios anunciaron una edición física <strong>Deluxe</strong> de <em>The Elder Scrolls IV: Oblivion Remastered</em> para octubre de 2025, con libro de arte digital, banda sonora y contenido extra pensado para coleccionistas.</p>
+        <p><a href="https://www.windowscentral.com/gaming/xbox/the-elder-scrolls-4-oblivion-remastered-physical-deluxe-edition-october-2025" target="_blank" rel="noopener">Leer más</a></p>
+      </article>
+
+      <article class="noticia">
+        <img src="https://upload.wikimedia.org/wikipedia/commons/4/4a/Logo_Mafia_The_Old_Country.png" alt="Mafia: The Old Country" style="max-width:300px;display:block;margin-bottom:8px;">
+        <h3>Mafia: The Old Country — regreso de la saga con buenas reseñas</h3>
+        <p>La nueva entrega de la serie <em>Mafia</em> volvió a finales de 2025 con una narrativa centrada en los orígenes del crimen organizado; la recepción crítica destacó su enfoque cinematográfico y su regreso a las raíces lineales de la saga.</p>
+        <p><a href="https://www.gamesradar.com/games/third-person-shooter/mafia-the-old-country-guide/" target="_blank" rel="noopener">Leer más</a></p>
+      </article>
     </div>
-  </section>
+  </div>
+</section>
 
-  <!-- Contacto -->
-  <section id="contacto" class="contenedor">
-    <h2>📩 Contáctanos</h2>
-    <form>
-      <input type="text" placeholder="Tu nombre" required>
-      <input type="email" placeholder="Tu correo" required>
-      <textarea placeholder="Tu mensaje" required></textarea>
+
+  
+<section id="galeria" class="galeria-seccion">
+  <div class="container">
+    <h2>Galería: Eventos de videojuegos</h2>
+    <div class="galeria-grid" style="display:flex;gap:16px;flex-wrap:wrap;">
+      <figure style="width:32%;margin:0;">
+        <img src="https://upload.wikimedia.org/wikipedia/commons/0/03/Gamescom_Eingang.jpg" alt="Entrada Gamescom" style="width:100%;height:auto;">
+        <figcaption><strong>Gamescom — Entrada</strong><br/>Ambiente en la entrada principal de Gamescom, la feria más grande de Europa.</figcaption>
+      </figure>
+
+      <figure style="width:32%;margin:0;">
+        <img src="https://upload.wikimedia.org/wikipedia/commons/2/2a/E3_2019_Electronic_Entertainment_Expo_%2848044889348%29.jpg" alt="E3 2019" style="width:100%;height:auto;">
+        <figcaption><strong>E3 — Stand y presentaciones</strong><br/>Escena típica en E3 con stands y demostraciones en vivo.</figcaption>
+      </figure>
+
+      <figure style="width:32%;margin:0;">
+        <img src="https://upload.wikimedia.org/wikipedia/commons/e/e4/Inzoi_Gamescom_1.jpg" alt="Stand inZOI en Gamescom" style="width:100%;height:auto;">
+        <figcaption><strong>Stand inZOI (Gamescom)</strong><br/>Zona de demostraciones y puestos para prensa y público.</figcaption>
+      </figure>
+    </div>
+  </div>
+</section>
+
+
+  <section id="contacto">
+    <h2>Contacto</h2>
+    <form id="contactForm">
+      <input type="text" placeholder="Nombre" required />
+      <input type="email" placeholder="Correo" required />
+      <textarea placeholder="Mensaje" required></textarea>
       <button type="submit">Enviar</button>
     </form>
   </section>
 
-  <!-- Footer -->
   <footer>
-    <p>© 2025 Mundo Gamer - Todos los derechos reservados</p>
+    <p>&copy; 2025 Mundo Gamer. Todos los derechos reservados.</p>
   </footer>
+
+  <script src="js/script.js"></script>
 </body>
 </html>
